<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backsea"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text_title"
        android:id="@+id/textView24"
        android:layout_marginTop="15dp"
        android:textSize="30dp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text_province"
        android:id="@+id/textView25"
        android:textSize="30dp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_text_line1"
        android:id="@+id/textView19"
        android:textSize="28dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_text_line2"
        android:id="@+id/textView20"
        android:textSize="28dp"

        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_text_line3"
        android:id="@+id/textView21"
        android:textSize="28dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_text_line4"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView21"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:textSize="28dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_text_line5"
        android:id="@+id/textView23"
        android:textSize="28dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:id="@+id/textView26"
        android:textSize="28dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:id="@+id/textView27"
        android:textSize="28dp"
        android:layout_marginBottom="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView28"
        android:textSize="28dp"
        android:textColor="#000000" />

</LinearLayout>
