<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#fffba9"
android:onClick="hideKeyBoard"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.05">

    <ImageView
        android:id="@+id/fragedit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/fragedit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:weightSum="1"
    android:layout_gravity="center"
    android:layout_weight="0.9">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsernameE"
        android:singleLine="true"
        android:hint="@string/register_username"
        android:maxLength="50"
        android:textColor="#000000"
        android:layout_margin="2dp"
        android:clickable="false"
        android:editable="false"
        android:enabled="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPasswordE"
        android:singleLine="true"
        android:hint="@string/register_password"
        android:maxLength="12"
        android:textColor="#000000"
        android:layout_margin="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmailE"
        android:singleLine="true"
        android:hint="@string/register_email"
        android:maxLength="255"
        android:textColor="#000000"
        android:layout_margin="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtAgeE"
        android:singleLine="true"
        android:hint="@string/register_age"
        android:digits="0123456789"
        android:maxLength="3"
        android:textColor="#000000"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/rbgGenderE"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_gender_m"
            android:id="@+id/MaleE"
            android:checked="true"
            android:textColor="#000000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_gender_f"
            android:id="@+id/FemaleE"
            android:layout_marginLeft="20dp"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="กรุณาเลือกอาชีพ"
        android:id="@+id/textView17"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinCareerE"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="กรุณาเลือกภาษา"
        android:id="@+id/textView15"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinLanguageE"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ชนิดของสถานที่สนใจเป็นพิเศษ"
        android:id="@+id/textView16"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinInterestE"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />


</LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/btnBackedit"
            android:layout_gravity="left|bottom|center_horizontal"
            android:layout_weight="0"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_btn_dialog" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/btnSummitE"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_btn_regis" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:id="@+id/btnResetE"
            android:layout_gravity="bottom|right"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_btn_reset" />
    </RelativeLayout>


</LinearLayout>